tree-sitter-leo/grammar.js
    source_file: $ => seq(
      repeat($.import_declaration),
      $.program_declaration,
    ),

    // ============================================
    // Comments
    // ============================================
    identifier: _ => /[a-zA-Z_][a-zA-Z0-9_]*/,

    // Path like Foo::bar::baz
    path: $ => prec.left(seq(
      $.identifier,
      repeat1(seq('::', $.identifier)),
    )),

    // Program ID like my_program.aleo
    program_id: _ => /[a-zA-Z_][a-zA-Z0-9_]*\.aleo/,

    // Locator like my_program.aleo/my_function
    integer_literal: _ => choice(
      /0x[0-9a-fA-F_]+/,
      /0o[0-7_]+/,
      /0b[01_]+/,
      /[0-9][0-9_]*/,
    ),

    // String literal
    _type: $ => choice(
      $.primitive_type,
      $.array_type,
      $.tuple_type,
      $.unit_type,
      $.optional_type,
      $.future_type,
      $.identifier,
      $.locator,
      $.path,
    ),

    primitive_type: _ => choice(
      'address',
      'bool',
      'field',
      'group',
      'scalar',
      'signature',
      'string',
      'i8',
      'i16',
      'i32',
      'i64',
      'i128',
      'u8',
      'u16',
      'u32',
      'u64',
      'u128',
    ),

    array_type: $ => seq(
      '[',
      field('element', $._type),
      ';',
      field('size', $._expression),
      ']',
    ),

    _expression: $ => choice(
      $._expression_no_struct,
      $.struct_expression,
    ),
    
    // Expression without struct initializer (used in if/for conditions)
    literal: $ => choice(
      $.address_literal,  // Put address_literal first to prioritize it
      $.typed_literal,
      $.integer_literal,
      $.string_literal,
      $.boolean_literal,
      $.none_literal,
    ),

    // Typed literals like 5u32, 10field, etc.
    typed_literal: $ => seq(
      $.integer_literal,
      $.type_suffix,
    ),

    type_suffix: _ => choice(
      'field',
      'group',
      'scalar',
      'i8',
      'i16',
      'i32',
      'i64',
      'i128',
      'u8',
      'u16',
      'u32',
      'u64',
      'u128',
    ),

    array_expression: $ => seq(
      '[',
      optional(seq(
        $._expression,
        repeat(seq(',', $._expression)),
        optional(','),
      )),
      ']',
    ),

    associated_function_call: $ => prec(PREC.CALL, seq(
      field('type', $.path),
      optional($.const_arguments),
      '(',
      optional($.argument_list),
      ')',
    )),

    argument_list: $ => seq(
      $._expression,
      repeat(seq(',', $._expression)),
      optional(','),
    ),

    member_access: $ => prec.left(PREC.POSTFIX, seq(
      field('object', $._expression),
      '.',
      field('member', $.identifier),
    )),

    array_access: $ => prec.left(PREC.POSTFIX, seq(
      field('array', $._expression),
      '[',
      field('index', $._expression),
      ']',
    )),

    binary_expression: $ => choice(
      // Power (right associative)
      prec.right(PREC.POWER, seq(
        field('left', $._expression),
        field('operator', '**'),
        field('right', $._expression),
      )),
      // Multiplicative
      prec.left(PREC.MULTIPLICATIVE, seq(
        field('left', $._expression),
        field('operator', choice('*', '/', '%')),
        field('right', $._expression),
      )),
      // Additive
      prec.left(PREC.ADDITIVE, seq(
        field('left', $._expression),
        field('operator', choice('+', '-')),
        field('right', $._expression),
      )),
      // Shift
      prec.left(PREC.SHIFT, seq(
        field('left', $._expression),
        field('operator', choice('<<', '>>')),
        field('right', $._expression),
      )),
      // Bitwise AND
      prec.left(PREC.BIT_AND, seq(
        field('left', $._expression),
        field('operator', '&'),
        field('right', $._expression),
      )),
      // Bitwise XOR
      prec.left(PREC.BIT_XOR, seq(
        field('left', $._expression),
        field('operator', '^'),
        field('right', $._expression),
      )),
      // Bitwise OR
      prec.left(PREC.BIT_OR, seq(
        field('left', $._expression),
        field('operator', '|'),
        field('right', $._expression),
      )),
      // Comparison (not associative)
      prec.left(PREC.COMPARISON, seq(
        field('left', $._expression),
        field('operator', choice('<', '>', '<=', '>=')),
        field('right', $._expression),
      )),
      // Equality (not associative)
      prec.left(PREC.EQUALITY, seq(
        field('left', $._expression),
        field('operator', choice('==', '!=')),
        field('right', $._expression),
      )),
      // Logical AND
      prec.left(PREC.AND, seq(
        field('left', $._expression),
        field('operator', '&&'),
        field('right', $._expression),
      )),
      // Logical OR
      prec.left(PREC.OR, seq(
        field('left', $._expression),
        field('operator', '||'),
        field('right', $._expression),
      )),
    ),

    ternary_expression: $ => prec.right(PREC.TERNARY, seq(
      field('condition', $._expression),
      '?',
      field('consequence', $._expression),
      ':',
      field('alternative', $._expression),
    )),

    cast_expression: $ => prec.left(PREC.CAST, seq(
      field('value', $._expression),
      'as',
      field('type', $.primitive_type),
    )),

    special_access: $ => seq(
      field('object', choice('block', 'self', 'network')),
      '.',
      field('member', choice($.identifier, 'address')),
    ),

    _statement: $ => choice(
      $.expression_statement,
      $.return_statement,
      $.definition_statement,
      $.const_statement,
      $.assignment_statement,
      $.conditional_statement,
      $.for_statement,
      $.assert_statement,
      $.assert_eq_statement,
      $.assert_neq_statement,
      $.block,
    ),

    block: $ => seq(
      '{',
      repeat($._statement),
      '}',
    ),

    expression_statement: $ => seq(
      $._expression,
      ';',
    ),

    return_statement: $ => seq(
      'return',
      optional($._expression),
      ';',
    ),

    definition_statement: $ => seq(
      'let',
      choice(
        // Single variable
        seq(
          field('name', $.identifier),
          optional(seq(':', field('type', $._type))),
        ),
        // Multiple variables (destructuring)
        seq(
          '(',
          field('name', $.identifier),
          repeat1(seq(',', field('name', $.identifier))),
          optional(','),
          ')',
          optional(seq(':', field('type', $._type))),
        ),
      ),
      '=',
      field('value', $._expression),
      ';',
    ),

    assert_statement: $ => seq(
      'assert',
      '(',
      field('condition', $._expression),
      ')',
      ';',
    ),

    program_declaration: $ => seq(
      'program',
      $.program_id,
      '{',
      repeat($._program_item),
      '}',
    ),

    _program_item: $ => choice(
      $.function_declaration,
      $.struct_declaration,
      $.record_declaration,
      $.mapping_declaration,
      $.storage_declaration,
      $.global_const,
      $.constructor_declaration,
    ),

    // ============================================
    // Functions
    // ============================================
    function_declaration: $ => seq(
      repeat($.annotation),
      optional('async'),
      field('kind', $.function_kind),
      field('name', $.identifier),
      optional($.const_parameters),
      $.parameter_list,
      optional(seq('->', $.function_output)),
      $.block,
    ),

    function_kind: _ => choice(
      'function',
      'transition',
      'inline',
      'script',
    ),

    parameter_list: $ => seq(
      '(',
      optional(seq(
        $.parameter,
        repeat(seq(',', $.parameter)),
        optional(','),
      )),
      ')',
    ),

    parameter: $ => seq(
      optional($.visibility_modifier),
      field('name', $.identifier),
      ':',
      field('type', $._type),
    ),

    function_output: $ => choice(
      seq(optional($.visibility_modifier), $._type),
      seq(
        '(',
        optional($.visibility_modifier),
        $._type,
        repeat(seq(',', optional($.visibility_modifier), $._type)),
        optional(','),
        ')',
      ),
    ),

    struct_declaration: $ => seq(
      'struct',
      field('name', $.identifier),
      optional($.const_parameters),
      '{',
      optional($.struct_members),
      '}',
    ),

    struct_members: $ => seq(
      $.struct_member,
      repeat(seq(',', $.struct_member)),
      optional(','),
    ),

    struct_member: $ => seq(
      optional($.visibility_modifier),
      field('name', $.identifier),
      ':',
      field('type', $._type),
    ),

    // ============================================
    // Mappings and Storage
    // ============================================
    mapping_declaration: $ => seq(
      'mapping',
      field('name', $.identifier),
      ':',
      field('key_type', $._type),
      '=>',
      field('value_type', $._type),
      ';',
    ),
